[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wav_tokenizer"
version = "1.0.4"
description = "Songsterr AI library"
dependencies = [
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "scipy==1.11.4",
    "einops==0.7.0",
    "pyyaml==6.0.1",
    "huggingface_hub==0.23.0",
    "matplotlib==3.7.2",
    "transformers==4.46.3",
    "pytorch-lightning==1.8.6",
    "tensorboardX==2.6",
    "numpy==1.23.5",
    "jsonargparse[signatures]>=4.15.2",
#    "fairseq",
    "torchcrepe",
    "librosa",
#    "pesq"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []
