[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wav_tokenizer"
version = "1.0.9"
description = "WavTokenizer fork"
dependencies = [
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "scipy==1.11.4",
    "einops==0.6.1",
    "pyyaml==6.0.1",
    "matplotlib==3.7.2",
    "numpy==1.23.5",
#    "fairseq",
    "librosa",
#    "pesq"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []
